--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>atguigu-spring</module>
         <module>spring6-aop</module>
         <module>spring-jdbc-tx</module>
+        <module>spring6-Resource</module>
     </modules>
 
     <properties>
